--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: CUPS Print Server Add-on Repository
 url: https://github.com/Sergio-Bianchi/ha-addons
-maintainer: Sergio Bianchi 
+maintainer: Sergio Bianchhi
