--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -2,14 +2,11 @@ ARG BUILD_FROM=ghcr.io/home-assistant/aarch64-base:3.18
 FROM ${BUILD_FROM}
 
 # Install CUPS and required packages
-RUN echo "http://dl-cdn.alpinelinux.org/alpine/v3.18/community" >> /etc/apk/repositories && \
-    apk update && \
-    apk add --no-cache \
+RUN apk add --no-cache \
     cups \
     cups-filters \
     cups-pdf \
-    cups-client \
-    hplip
+    cups-client
 
 # Copy root filesystem
 COPY rootfs /
