Proviamo a fare un semplice Hello World, con l'AI non ha funzionato

--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -1,15 +1,8 @@
-ARG BUILD_FROM=ghcr.io/home-assistant/aarch64-base:3.18
-FROM ${BUILD_FROM}
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
-# Install CUPS only
-RUN apk add --no-cache cups && \
-    mkdir -p /var/run/cups/certs && \
-    mkdir -p /var/log/cups && \
-    mkdir -p /etc/cups && \
-    chmod 0755 /var/run/cups/certs
-
-# Copy root filesystem
-COPY rootfs /
+COPY run.sh /
+RUN chmod a+x /run.sh
 
 # Set debug mode for CUPS
 ENV CUPS_DEBUG_LOG=cups-debug.log
@@ -17,13 +10,9 @@ ENV CUPS_DEBUG_LEVEL=debug
 
 EXPOSE 631
 
-# Build arguments
-ARG BUILD_ARCH
-ARG BUILD_DATE
-ARG BUILD_REF
-ARG BUILD_VERSION
 
-# Labels
+CMD [ "/run.sh" ]
+
 LABEL \
     io.hass.name="CUPS Print Server" \
     io.hass.description="CUPS Print Server add-on for Home Assistant" \
